[gd_scene load_steps=6 format=3 uid="uid://jpsnpk41fqm5"]

[ext_resource type="Texture2D" uid="uid://bja0wl8tcw71c" path="res://art/backgrounds/background_01.png" id="1_17ggi"]
[ext_resource type="Script" path="res://levels/mainmenu/main_menu.gd" id="1_a8w7n"]
[ext_resource type="PackedScene" uid="uid://dll6ievqpt183" path="res://levels/level_01/level_01.tscn" id="2_8fx0b"]
[ext_resource type="Texture2D" uid="uid://bujx43rcy5b85" path="res://art/backgrounds/background_02.png" id="2_ogwuk"]

[sub_resource type="LabelSettings" id="LabelSettings_6f6bv"]
font_size = 90

[node name="main_menu" type="Node" node_paths=PackedStringArray("ui", "level_container", "ip_line_edit", "status_label", "not_connected_hbox", "host_hbox", "client_name_line_edit")]
script = ExtResource("1_a8w7n")
ui = NodePath("UI")
level_container = NodePath("level")
level_scene = ExtResource("2_8fx0b")
ip_line_edit = NodePath("UI/NotConnectedHBox/IPLineEdit")
status_label = NodePath("UI/Label")
not_connected_hbox = NodePath("UI/NotConnectedHBox")
host_hbox = NodePath("UI/HostHBox")
client_name_line_edit = NodePath("UI/NotConnectedHBox/ClientNameLineEdit")

[node name="level" type="Node" parent="."]

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
_spawnable_scenes = PackedStringArray("res://levels/level_01/level_01.tscn")
spawn_path = NodePath("../level")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackgroundTrees" type="TextureRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_17ggi")
expand_mode = 1

[node name="BackgroundHouses" type="TextureRect" parent="UI/BackgroundTrees"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ogwuk")
expand_mode = 1

[node name="NotConnectedHBox" type="HBoxContainer" parent="UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 720.0
offset_bottom = 62.0

[node name="ClientNameLineEdit" type="LineEdit" parent="UI/NotConnectedHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Name"

[node name="HostButton" type="Button" parent="UI/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Host"

[node name="JoinButton" type="Button" parent="UI/NotConnectedHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join
"

[node name="IPLineEdit" type="LineEdit" parent="UI/NotConnectedHBox"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Room Code"

[node name="HostHBox" type="HBoxContainer" parent="UI"]
visible = false
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 315.0
offset_bottom = 62.0

[node name="P2PButton" type="Button" parent="UI/HostHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Establish P2P
"

[node name="StartButton" type="Button" parent="UI/HostHBox"]
layout_mode = 2
size_flags_horizontal = 3
text = "Start
"

[node name="Label" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "
"
label_settings = SubResource("LabelSettings_6f6bv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="LobbyDisplay" type="VBoxContainer" parent="UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
alignment = 1

[connection signal="pressed" from="UI/NotConnectedHBox/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/NotConnectedHBox/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/HostHBox/P2PButton" to="." method="_on_p_2p_button_pressed"]
[connection signal="pressed" from="UI/HostHBox/StartButton" to="." method="_on_start_button_pressed"]
